--- a/pom.xml
+++ b/pom.xml
@@ -97,15 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url> http://172.31.85.32:8081/repository/ebay-bts-releases/</url>
+	      <url><http://44.202.6.75:8081/repository/wellfargo-bts-releases/</url>
 	    </repository>
-	    
-		
-		
+	    	
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://172.31.85.32:8081/repository/ebay-bts-snapshot/</url>
+	      <url>http://44.202.6.75:8081/repository/wellfargo-bts-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
